# ugh-like

./: .gitignore  Cargo.toml  build_wasm.sh
.cargo/: config.toml
assets/: actors.afphoto  birdy.lvl  creatures.afphoto  mammoths.lvl  playground.lvl  tiles.afphoto  tricity.lvl
src/: actor.rs  audio.rs  board.rs  creatures.rs  globals.rs  main.rs  passenger.rs  player.rs  render.rs  sprite.rs  ui.rs  utils.rs
wasm-assets/: index.html
