[package]
name = "engine_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rogalik_engine = { path = "../rogalik/crates/rogalik_engine" }
rogalik_math = { path = "../rogalik/crates/rogalik_math" }
rogalik_wgpu = { path = "../rogalik/crates/rogalik_wgpu" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

